--- a/src/app/input-box/input-box.component.html
+++ b/src/app/input-box/input-box.component.html
@@ -2,8 +2,8 @@
     <span class="tag-text">
         {{tag}}
     </span>
-    <input type="text" class="inputBox" type="number">
+    <input [(ngModel)]="valueQty" type="text" class="inputBox" type="number">
     <span class="exchange-text">
-        {{currency}}
+        {{currencyText}}
     </span>
 </div>
