--- a/src/app/tasas/tasas.component.html
+++ b/src/app/tasas/tasas.component.html
@@ -1,4 +1,4 @@
 <div class="tasas">
-    <p>Venta: S/. 3.72000</p>
-    <p>Compra: S/. 3.72965</p>
+    <p>Venta: {{currency}} {{currencySellValue}}</p>
+    <p>Compra: {{currency}} {{currencyBuyValue}}</p>
 </div>
