--- a/src/app/calculadora/calculadora.component.css
+++ b/src/app/calculadora/calculadora.component.css
@@ -23,3 +23,49 @@
         }
     }
 }
+
+.tag-text{
+    text-transform: uppercase;
+    position: absolute;
+    font-size: 16px;
+    margin-left: 50px;
+    background-color: #f3c90e;
+    padding: 8px 35px;
+    border-radius: 3px;
+    text-align: center;
+    color: white;
+}
+.inputBox{
+    box-sizing: border-box;
+    border: 0px;
+    background-color: #E5F6EB;
+    width: 100%;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #495057;
+    font-size: 18px;
+    border-radius: 10px;
+    min-height: 25px;
+    padding: 20px 110px 20px 15px;
+    margin-top: 20px;
+    text-align: right;
+}
+input:focus{
+    outline: none;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
+.exchange-text{
+    position: absolute;
+    right: 0px;
+    margin-top: 42px;
+    font-size: 20px;
+    margin-right: 45px;
+}
