MiBancoCalculadora: Agregada logica de servicio para el simbolo de la moneda

--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -5,7 +5,7 @@
             Cambia tus dolares y soles al instante
         </p>
     </div>
-    <app-tasas currency="{{initBaseCurrency}}" currencySellValue="{{currency}}"></app-tasas>
+    <app-tasas currency="{{baseCurrencySymbol}}" currencySellValue="{{currency}}"></app-tasas>
     <div>
         <div>
             <span class="tag-text">
