MiBancoCalculadora: Agregado dropdown para el cambio de moneda

--- a/src/app/input-box/input-box.component.html
+++ b/src/app/input-box/input-box.component.html
@@ -2,7 +2,7 @@
     <span class="tag-text">
         {{tag}}
     </span>
-    <input [(ngModel)]="valueQty" type="text" class="inputBox" type="number">
+    <input [(ngModel)]="valueMdl" type="text" class="inputBox" type="number" value={{valueQty}}>
     <span class="exchange-text">
         {{currencyText}}
     </span>
