--- a/src/app/calculadora/calculadora.component.html
+++ b/src/app/calculadora/calculadora.component.html
@@ -6,6 +6,7 @@
         </p>
     </div>
     <app-tasas currency="{{baseCurrencySymbol}}" currencySellValue="{{currency}}"></app-tasas>
+    <app-choose-currency (newBaseCurrency)="onSelectedCurrent($event)" (newConvertCurrency)="onSelectedToConvert($event)" baseCurrency="{{initBaseCurrency}}" convertCurrency="{{initChangeCurrency}}"></app-choose-currency>
     <div>
         <div>
             <span class="tag-text">
@@ -16,16 +17,14 @@
                 {{initBaseCurrency}}
             </span>
         </div>
-        <!--app-input-box tag="{{'Tienes'}}" currencyText="{{'Dolares'}}" valueQty="{{initValue}}"></app-input-box-->
         <div class="calc-button">
             <img src="./assets/arrows.png" alt="Intercambiar_Logo" (click)="changeCurrency()">
         </div>
-        <!--app-input-box tag="{{'Recibes'}}" currencyText="{{'Soles'}}" valueQty="{{changeValue}}"></app-input-box-->
         <div>
             <span class="tag-text">
                 Recibes
             </span>
-            <input [(ngModel)]="changeValue" type="text" class="inputBox" type="number" value="{{initValue*currency}}">
+            <input [(ngModel)]="changeValue" type="text" class="inputBox" type="number" value="{{(initValue*currency).toFixed(10)}}">
             <span class="exchange-text">
                 {{initChangeCurrency}}
             </span>
