MiBancoCalculadora: Pruebas unitarias agregadas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-calculadora></app-calculadora>
-<router-outlet />
+<section class="componentArea">
+    <app-calculadora></app-calculadora>
+</section>
