--- a/src/app/calculadora/calculadora.component.css
+++ b/src/app/calculadora/calculadora.component.css
@@ -8,9 +8,8 @@
         justify-content: space-between;
     }
     .calc-button{
-        text-align: center;
-        margin-top: 20px;
-        margin-bottom: 20px;
+        text-align: right;
+        margin: 20px 35px;
         img{
             border-radius: 100px;
             transition: 0.5s;
@@ -23,7 +22,10 @@
         }
     }
 }
-
+.inputData{
+    text-align: right;
+    margin: 10px 30px;
+}
 .tag-text{
     text-transform: uppercase;
     position: absolute;
@@ -63,8 +65,9 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 .exchange-text{
-    position: absolute;
-    right: 0px;
+    position: relative;
+    right: -15px;
+    top: -44px;
     margin-top: 42px;
     font-size: 20px;
     margin-right: 45px;
