MiBancoReto 2: Terminado routing, estilos, tipado y responsive

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<section class="componentArea">
-    <app-calculadora></app-calculadora>
-</section>
+<app-header></app-header>
+<main>
+    <router-outlet></router-outlet>
+</main>
+<app-footer></app-footer>
