--- a/src/app/components/tasas/tasas.component.scss
+++ b/src/app/components/tasas/tasas.component.scss
@@ -7,4 +7,7 @@
         font-size: 18px;
         text-transform: uppercase;
     }
+    @media (max-width: 768px) {
+        text-align: center;
+    }
 }
